--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 	<div class="main">
 		<div class="container">
-			<h1>Elastic Template!</h1>
+			<h1>Lambe Lambe! Vai?</h1>
 			<div id="boo">
                 <div class="sidea">
                 </div>
